SERVER-12908 don't aggressively retry when config inconsistency detected in balancer